--- a/discussion.tex
+++ b/discussion.tex
@@ -1,33 +1,46 @@
 \subsection{Standard Signals}
 
-The raw square wave, shown in Figure~\ref{fig: test1 picolog}, has an instantaneous change between the two voltage levels. However, on the app, the discontinuities were not as sharp because when a discontinuity occurs, the averaging method implemented on the Arduino softens this sudden change. The Arduino reads in five input signal per second and the mean value is calculated and sent to the app every second. Whilst the square wave cannot be replicated exactly, this issue doesn't affect the neurochemical signals. As seen in Figure~\ref{fig: SD}, any sharp discontinuities that occur are due to noise or electrical artefacts, so the averaging method implemented will smooth these out. The transient changes that occur during an SD for potassium, glucose and lactate occur gradually so the shape will be captured. Whilst the square wave was meant to have a peak-to-peak voltage of 1V, it can be observed that the upper bound exceeds 1V. However, this is a fault of the signal generator as this is also observed on the PicoScope. The prototype successfully followed the signal it was given.
+The raw square wave, shown in Figure~\ref{fig: test1 picolog}, has an instantaneous change between the two voltage levels. However, on the app, the discontinuities were not as sharp because when a discontinuity occurs, the averaging method implemented on the Arduino softens this sudden change. The Arduino reads in five input signals per second and the mean value is calculated and sent to the app every second. Whilst the square wave cannot be replicated exactly, this issue doesn't affect the electrochemical signals because any sharp discontinuities that occur will be due to noise and these will be smoothed out by the averaging method. The transient changes that occur during an SD for potassium, glucose and lactate occur gradually so the shape will be captured. Whilst the square wave was meant to have a peak-to-peak voltage of 1V, it can be observed that the upper bound exceeds 1V. However, this is a fault of the signal generator as this is also observed on the PicoScope. The prototype successfully followed the signal it was given.
 
-The effect of averaging and filtering noise and artefacts can be shown by comparing the noise signals in Figures~\ref{fig: test1 picolog} and \ref{fig: test1 app}. The raw noise signal displayed on PicoLog shows lots of sudden peaks. On the other hand, the app shows the noise signal has been smoothed. 
+The effect of averaging and filtering noise and artefacts can be shown by comparing the noise signals in Figures~\ref{fig: test1 picolog} and \ref{fig: test1 app}. The raw noise signal displayed on PicoLog shows many sudden peaks. On the other hand, the app shows the noise signal has been smoothed and the signal remains fairly constant around 500mV. 
 
-Comparing the sine waves, the app shows a slightly more jagged signal. This is because the app receives the signals at a lower frequency of 1Hz, compared to the PicoScope's 5Hz sampling frequency. The higher frequency captures the signal better so results in a smoother wave. Regardless, the sine wave is well represented on the app and this won't be an issue for electrochemical signals as changes occur over a longer duration. 
+Comparing the sine waves, the app shows a slightly more jagged signal. This is because the app receives the signals at a lower frequency of 1Hz, compared to the PicoScope's 5Hz sampling frequency. The higher frequency captures the signal better so results in a smoother wave. Regardless, the sine wave is well represented on the app and this will not be an issue for electrochemical signals as changes occur over a longer duration. 
 
-The peak amplitudes of the sine and square wave on the app match that recorded on PicoLog. However, it can be noted that the app has a time lag of 1.25s compared to the PicoScope because the wireless transmission is not actually negligible as assumed in section \ref{section: real time}. However, this time lag is a systemic bias and is kept constant across all time values, and is much smaller compared to the timescale of an SD so is not significant to the end user.
+Table~\ref{table: peak amplitudes} shows the peak amplitudes of the sine and square waves on the app are within 4\% error of the signals recorded on PicoLog. It can be noted that the app has a time lag of 1.25s compared to the PicoScope because wireless transmission is slower than wired transmission, and the transmission time is not actually negligible as previously assumed. However, this time lag is a systemic bias and is kept constant across all time values. The delay is much shorter than the timescale of an SD so it is not significant to the end user.
 
+\begin{table}[h!]
+\centering
+\begin{tabular}{||c c c||} 
+ \hline
+ Signal & PicoLog: Peak Amplitude (mV) & App: Peak Amplitude (mV) \\ [0.5ex] 
+ \hline\hline
+ Square wave & 1045 & 1083 \\
+ Sine wave & 790 & 789 \\
+ \hline
+\end{tabular}
+\caption{Peak amplitudes of test signals recorded on PicoLog and on the app.}
+\label{table: peak amplitudes}
+\end{table}
 
 
 \subsection{Spreading Depolarisation}
 
-Figure~\ref{fig: test2} shows how the app was able to respond to receiving real data as opposed to standard signals. For all neurochemicals, the app was able to capture the shape of the signals even with a prototype's lower sampling rate of 5Hz, compared to the raw data's sampling frequency of 200Hz. The averaging method and filtering implemented on the Arduino was able to reduce the noise levels of the signals, seen clearly in the glucose signal where the variation in the signal is reduced, and also remove sharp noise in the case of the lactate signal. Sharp noise was still present in the glucose and potassium signals, however the app has been able to attenuate the noise to a lower amplitude.
+Figure~\ref{fig: test2} shows how the app was able to respond to receiving real data as opposed to standard signals. For all three electrochemical signals, the app was able to capture the shape of the signals even with the prototype's lower sampling rate of 5Hz, compared to the raw data's sampling frequency of 200Hz. The averaging method and filtering implemented on the Arduino was able to reduce the noise levels of the signals, seen clearly in the glucose signal where the variation in the signal is reduced, and also remove sharp noise in the case of the lactate signal. Sharp noise was still present in the glucose and potassium signals, however the app has been able to attenuate the noise to a lower amplitude.
 
-Figure~\ref{fig: test2 conc} shows the conversion of voltage to concentration based on the calibration voltages, given in Table~\ref{table: calibration conc}, that were inputted on the Chemical Composition page of the app. The experiment shows that glucose decreased by $\sim0.23 mM$, lactate increased by $\sim2.7 mM$, and potassium increased by $\sim0.78 mM$. These results appear to deviate greatly from literature which expected glucose to decrease by 18-93$\mu M$ and lactate to increase by 5-100$\mu M$. However, the patient that this data set was obtained from displayed changes of $-0.223mM$, $2.7mM$, and $0.78mM$ (corresponding to glucose, lactate, and potassium) \cite{Rogers2017}, hence the app was able to calculate the concentration changes well given the calibration values provided. Furthermore, the patient's baseline concentrations were recorded as 0.544$mM$, 0.068$mM$, and 2.71$mM$ respectively for glucose, lactate, and potassium \cite{Rogers2017}. The baseline concentrations have been captured by the app and can be observed just before the SD transient change occurs.
+Figure~\ref{fig: test2 conc} shows the conversion of voltage to concentration based on the calibration voltages, given in Table~\ref{table: calibration conc}, that were inputted on the Chemical Composition page of the app. The experiment shows that, during an SD, glucose decreased by $\sim0.24 mM$, lactate increased by $\sim2.95 mM$, and potassium increased by $\sim0.8 mM$. These results appear to deviate greatly from literature which expected glucose to decrease by 18--93$\mu M$, lactate to increase by 5--100$\mu M$, and potassium to increase by 27--47$mM$. However, the patient that this data set was obtained from displayed changes of $-0.223mM$, $2.7mM$, and $0.78mM$ (corresponding to glucose, lactate, and potassium) \cite{Rogers2017}, hence the app was able to calculate the concentration changes given the calibration values provided. Furthermore, the patient's baseline concentrations were recorded as 0.544$mM$, 0.068$mM$, and 2.71$mM$ respectively for glucose, lactate, and potassium \cite{Rogers2017}. The baseline concentrations, observed just before the SD transient change, have been captured by the app as 0.57$mM$, 0.05$mM$, and 2.7$mM$ respectively so only deviate slightly from the experimental recordings.
 
 
 
 \subsection{iPad Application}
-The app is successfully able to support receiving and plotting three independent signals simultaneously, and display patient data clearly. The app has a simple and professional design with clear navigation. The graphs take up a large portion of the screen, allowing the data to be viewed clearly. To see finer detail, the graph can be zoomed and exact values of individual data points can be viewed by clicking on a point. The app shows all plots superimposed on one graph to allow for the transient decrease in glucose and transient increase of lactate and potassium that characterise a spreading depolarisation to be observed. However, if the user wishes to see an individual plot in detail, this too is allowed on the individual concentration pages shown on pages 3a, 3b and 3c in Figure~\ref{fig: storyboard}. These individual plots allow for the data to be viewed in terms of voltage or concentration, and the app prompts the user with instructions to view the concentration graph. These features allow the app to be user friendly and clearly present all the relevant data for a clinician to view.
+The app is successfully able to support receiving and plotting three independent signals simultaneously, and display patient data clearly. The app has a simple and professional design with clear navigation. The graphs take up a large portion of the screen, allowing the data to be viewed clearly. To see finer detail, the graph can be zoomed and exact values of individual data points can be viewed by clicking on a point. The app shows all plots superimposed on one graph to allow for the transient decrease in glucose and transient increase of lactate and potassium that characterise an SD to be observed. However, if the user wishes to see an individual plot in detail, this too is allowed on the individual concentration pages shown on pages 3a, 3b and 3c in Figure~\ref{fig: storyboard}. These individual plots allow for the data to be viewed in terms of voltage or concentration, and the app prompts the user with instructions to view the concentration graph. These features allow the app to be user friendly and clearly present all the relevant data for a clinician to view.
 
 
 
 
 \subsection{Limitations and Future Improvements}
-A major limitation of the prototype is the components used in the hardware. The inbuilt ADC on the Arduino only has 10-bit resolution and can only detect voltage readings between 0V and 5V. This gives a resolution of 4.88mV. An ADS1298 has 24-bit resolution, which allows to capture the neurochemical signals more precisely. For the same range of voltages, the resolution would be 0.298$\mu$V. The Arduino input pins also cannot receive input voltage outside of 0V to 5V. Whilst the neurochemical signals are not expected to exceed 5V, the potassium input can produce negative voltages, for example during calibration. These negative voltages need to be captured for the signals to be of clinical relevance. These issues will be resolved when the PCB being developed by the research group is used instead of the Arduino.
+A major limitation of the prototype is the components used in the hardware. The inbuilt ADC on the Arduino only has 10-bit resolution and can only detect voltage readings between 0V and 5V. This gives a resolution of 4.88mV. An ADS1298 has 24-bit resolution so can capture the electrochemical signals more precisely. For the same range of voltages, the resolution would be 0.298$\mu$V. The Arduino input pins also cannot receive input voltage outside of 0V to 5V, however, as seen in Figure~\ref{fig: test2}, the raw signals exhibit negative voltages and voltages exceeding 5V. These need to be captured in order to implement a correct and efficient signal processing method. These issues will be resolved when the PCB being developed by the Boutelle group is implemented instead of the Arduino.
 
-Furthermore, the Bluefruit LE SPI Friend's limitations include the transmitted string being restricted to 20 character, and the speed of transmission used in the prototype was restricted to 1 sample per second for each neurochemical signal. Ideally, all signal that the Arduino records should be sent to the app so that the app receives 5 samples per second. This would mean that no raw readings will be lost and an averaging method could be implemented on the app instead of on the Arduino. To achieve this, a BLE module that can send more characters at once, or one that is capable of sending data with smaller time intervals between transmission is required. Alternatively, the transmitted data could be encoded in a numerical binary format rather than as a string to reduce the size of transmission payload. 
+Furthermore, the Bluefruit LE SPI Friend's limitations include the transmitted string being restricted to 20 characters. Also the speed of transmission used in the prototype was restricted to 1 sample per second for each electrochemical signal. Ideally, all signals that the Arduino records should be sent to the app so that the app receives 5 samples per second. This would mean that no raw readings will be lost and an averaging method could be implemented on the app instead of on the Arduino. To achieve this, a BLE module that can send more characters at once, or one that is capable of sending data with smaller time intervals between transmission is required. Alternatively, the transmitted data could be encoded in a numerical binary format rather than as a string to reduce the size of transmission payload. 
 
 A limitation of implementing a block average is that the time is not exact as it represents a set of data instead of an individual data point. When the average value is transmitted, the time wirelessly sent with the data is the time of the latest reading. If the app receives all the raw signals and a moving average filter is implemented on the app, then this would resolve the issue as the average is calculated around the time point.
 
@@ -35,8 +48,5 @@ Currently, the app only receives data whilst it is open and connected to the BLE
 
 To further smooth out noise in the signals, further processing could be implemented on the app once the data is received. This could involve looking for sudden peaks that then return back to a similar value as before the peak occurred. 
 
-To make the app more user friendly and improve its functionality, the app could be encoded to detect when calibration is occurring. This would eliminate the need for the clinician the manually insert the calibration values into the app. Furthermore, the app could be programmed to identify when an SD occurs, by identifying the transient changes that characterise an SD, and send a push notification or alert to inform the clinician. Highlighting potential SD waves would allow for the clinician to quickly identify points of concern and allow for quicker diagnosis rather than the clinician manually analysing the data. However, the expected change in concentration during an SD can vary by a large amount i.e. glucose transiently decreases by approximately 18-93$\mu M$ and lactate transiently increases by 5-100$\mu M$ \cite{Rogers2017}. Using a large data set of different SDs and machine learning, a model could be trained to effectively identify an SD occurrence in real time. This model could then be integrated into the app.
+To make the app more user friendly and improve its functionality, the app could be encoded to detect when calibration is occurring. This would eliminate the need for the clinician to manually insert the calibration values into the app. Furthermore, the app could be programmed to identify when an SD occurs by identifying the transient changes that characterise an SD, and send a push notification or alert to inform the clinician. Highlighting potential SD waves would allow for the clinician to quickly identify points of concern and allow for quicker diagnosis rather than the clinician manually analysing the data. However, the expected change in concentration during an SD can vary by a large amount, i.e. glucose transiently decreases by approximately 18-93$\mu M$ and lactate transiently increases by 5-100$\mu M$ \cite{Rogers2017}. Using a large data set of different SDs and machine learning, a model could be trained to effectively identify an SD occurrence in real time. This model could then be integrated into the app.
 
-
-\subsection{Conclusion}
-The prototype has been designed such that the firmware features can be integrated with the PCB being developed, which can then be used with the iPad app. The app was able to receive and represent standard signals and spreading depolarisations, and accurately calculate the corresponding concentration changes.
